
export enum RoomType {
  CLASSROOM="classroom",
  OFFICE="office",
  AUDITORIUM="auditorium",
  LABORATORY="laboratory",
  OTHER="other"
}
