enum TaskType {
    Task1 = 'Segurança',
    Task2 = 'Entregas',
    Task3 = 'Outras',
  } 
  
export default TaskType;